Closed Bug 1725146 Opened 4 years ago Closed 4 years ago

[macOS 10.13] Address bar text is not readable if Firefox Dark theme is used

Categories

(Core :: Widget: Cocoa, defect, P1)

Desktop
macOS
defect
Points:
2

Tracking

()

VERIFIED FIXED
93 Branch
Iteration:
93.1 - Aug 9 - Aug 22
Tracking Status
firefox-esr78 --- unaffected
firefox-esr91 --- verified
firefox91 + wontfix
firefox92 + verified
firefox93 + verified

People

(Reporter: atrif, Assigned: bugzilla)

References

(Regression)

Details

(Keywords: regression)

Attachments

(2 files)

Attached image macOS_adress.png

Affected versions

  • 91.0 (20210804193234)
  • 92.0b2 (20210810185524)
  • 93.0a1 (20210810213316)

Affected platforms

  • macOS 10.13

Preconditions

  • Firefox Dark theme
  • Blue Highlight color inside System Preferences -> General

Steps to reproduce

  1. Open Firefox, write something in the address bar, and highlight it.

Expected result

  • Text inside the Address bar is displayed as expected.

Actual result

  • Text inside the Address bar is barely visible.

Regression range

Notes

  • Attached a screenshot.
  • I cannot reproduce the issue on macOS 10.14 or 10.15 with the same machine and external monitor.
Has Regression Range: --- → yes
Has STR: --- → yes

Harry, could you take a look? The regression range has a couple of appearance-related patches.

Flags: needinfo?(htwyford)

Before bug 1703892, we used the light NSColor.selectedTextBackgroundColor and simply halved the alpha channel to make it easier to discern white text underneath. After Bug 1700294, which added support for using different selection colors in dark and light modes, bug 1703892 stopped halving the alpha channel in dark mode because we could use the appropriate dark NSColor.selectedTextBackgroundColor. This doesn't work on 10.13 because 10.13 doesn't support dark mode.

We decide whether or not to halve alpha based on the ColorScheme value we pass to nsLookAndFeel::ProcessSelectionBackground. We should stop passing ColorScheme::Dark when the system does not support dark mode, like on 10.13.

Severity: S4 → S3
Points: --- → 2
Priority: -- → P1
Regressed by: 1700294
Assignee: nobody → htwyford
Status: NEW → ASSIGNED
Iteration: --- → 93.1 - Aug 9 - Aug 22
Flags: needinfo?(htwyford)
Attachment #9236515 - Attachment description: Bug 1725146 - Check system dark mode instead of ColorScheme in ProcessSelectionBackground. r?#mac-reviewers! → Bug 1725146 - Force ColorScheme::Light in NativeGetColor on macOS < 10.14. r?#mac-reviewers!
Pushed by htwyford@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/b69c43f3881c Force ColorScheme::Light in NativeGetColor on macOS < 10.14. r=mac-reviewers,mstange
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 93 Branch

Verified fixed with Firefox 93.0a1 (20210824094724) on macOS 10.12 and 10.13. The text is now readable inside the address bar.

Blocks: 1725147

Please nominate this for Beta and ESR91 approval when you get a chance.

Flags: needinfo?(htwyford)

Comment on attachment 9236515 [details]
Bug 1725146 - Force ColorScheme::Light in NativeGetColor on macOS < 10.14. r?#mac-reviewers!

Beta/Release Uplift Approval Request

  • User impact if declined: Highlighted text in the Urlbar will have low contrast.
  • Is this code covered by automated tests?: No
  • Has the fix been verified in Nightly?: No
  • Needs manual test from QE?: Yes
  • If yes, steps to reproduce: See comment 0. It should be tested on both macOS <= 10.13 and >= 10.14.
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): Small patch with well-understood effects. Tested in review by mstange on a machine running macOS 10.13.
  • String changes made/needed:

ESR Uplift Approval Request

  • If this is not a sec:{high,crit} bug, please state case for ESR consideration: This is a fairly serious UI regression and shouldn't sit for a year in ESR.
  • User impact if declined: See above.
  • Fix Landed on Version: 93
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): Small patch with well-understood effects.
  • String or UUID changes made by this patch:
Flags: needinfo?(htwyford)
Attachment #9236515 - Flags: approval-mozilla-esr91?
Attachment #9236515 - Flags: approval-mozilla-beta?
Flags: qe-verify+

Comment on attachment 9236515 [details]
Bug 1725146 - Force ColorScheme::Light in NativeGetColor on macOS < 10.14. r?#mac-reviewers!

Approved for 92.0b9 and 91.1esr.

Attachment #9236515 - Flags: approval-mozilla-esr91?
Attachment #9236515 - Flags: approval-mozilla-esr91+
Attachment #9236515 - Flags: approval-mozilla-beta?
Attachment #9236515 - Flags: approval-mozilla-beta+
QA Whiteboard: [qa-triaged]

Verified fixed 91.1.0esr (20210825223222), 92.0b9 (20210825224239) from comment 10 and comment 11 on macOS 10.13 and macOS 10.12. The text inside the address bar is visible when selected while using Firefox dark theme.

Status: RESOLVED → VERIFIED
Flags: qe-verify+
See Also: → 1732405
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: