Bug 1725146 - Force ColorScheme::Light in NativeGetColor on macOS < 10.14. r=mac-reviewers,mstange

Differential Revision: https://phabricator.services.mozilla.com/D122766